cambios en archivo html y css

--- a/productos.html
+++ b/productos.html
@@ -15,7 +15,7 @@
         <ul class="navli">
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page"
-                href="#productos.html">PRODUCTOS</a></li>
+                href="productos.html">PRODUCTOS</a></li>
               <li class="nav-item">
                 <a class="nav-link"
                 href="contacto.html">CONTACTO</a></li>
@@ -42,63 +42,12 @@
                 </div>
                 <div class="col-xs-10 col-sm-6 col-md-4 produc" >
                   <div class="card">
-                    <img src="assets/css/img/img 4.jpg" alt="torta">
+                    <img src="assets/css/img/img 2.jpg" alt="torta">
                     <h3>Postre 2</h3>
                     <p>$220</p>
-                  </div>
-                  </div>
-                  <div class="col-xs-10 col-sm-6 col-md-4 produc" >
-                    <div class="card">
-                      <img src="assets/css/img/img 10.jpg" alt="macarrones">
-                      <h3>Postre 3</h3>
-                      <p>$20 c/u</p>
-                    </div>
-                  </div>
-                  <div class="col-xs-10 col-sm-6 col-md-4 produc" >
-                    <div class="card">
-                      <img src="assets/css/img/img 2.jpg" alt="bocadillo">
-                      <h3>Postre 4</h3>
-                      <p>$120</p>
-                    </div>
-                  </div>
-                  <div class="col-xs-10 col-sm-6 col-md-4 produc" >
-                    <div class="card">
-                      <img src="assets/css/img/img 6.jpg" alt="panqueques">
-                      <h3>Postre 5</h3>
-                      <p>$5x120</p>
-                    </div>
-                  </div>
-                  <div class="col-xs-10 col-sm-6 col-md-4 produc" >
-                    <div class="card">
-                      <img src="assets/css/img/img 11.jpg" alt="masitas de chocolate">
-                      <h3>Postre 6</h3>
-                      <p>$20 c/u</p>
-                    </div>
-                  </div>
-                  <div class="col-xs-10 col-sm-6 col-md-4 produc" >
-                    <div class="card">
-                      <img src="assets/css/img/img 7.jpg" alt="torta">
-                      <h3>Postre 7</h3>
-                      <p>$50 la porcion</p>
-                    </div>
-                  </div>
-                  <div class="col-xs-10 col-sm-6 col-md-4 produc" >
-                    <div class="card">
-                      <img src="assets/css/img/img 5.jpg" alt="donal">
-                      <h3>Postre 8</h3>
-                      <p>$50 c/u</p>
-                    </div>
-                  </div>
-                  <div class="col-xs-10 col-sm-6 col-md-4 produc" >
-                    <div class="card">
-                      <img src="assets/css/img/img 9.jpg" alt="bocadito">
-                      <h3>Postre 9</h3>
-                      <p>$15 c/u</p>
-                    </div>
-                  </div>
-                </div>
-                </div>
-        </div>
+              </div>
+            </div>
+
 
 
 </body>
