ultimos cambios en css y html

--- a/contacto.html
+++ b/contacto.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>ARIZONA</title>
 <link rel="stylesheet" href="assets/css/estilo.css">
+
   </head>
   <body>
 
@@ -33,22 +34,21 @@
       <p>En esta pagina web, vas a encontrar todo tipo de prendas para el dia y la noche</p> -->
 
       <section>
-          <h2 class="contac">CONTACTO</h2>
           <p class="parrafo">♥Whatssap 3482-642006</p>
           <p class="parrafo">♥gmail: daiaragomez123@gmail.com</p>
           <p class="parrafo">♥Local: Reconquista- obligado 3121</p>
           <p class="parrafo">♥Hacemos envios a toda la zona y a todo el pais</p>
           <div class="row mb-3">
-            <p >Si queres obtener informacion, consulta aqui</p>
-      <label for="colFormLabelSm" class="control">Nombre</label>
+            <p class="parrafo">Si queres obtener informacion, consulta aqui:</p>
+      <label for="colFormLabelSm" class="label">Nombre</label>
       <div class="col-sm-10">
       <input type="email" class="control" id="colFormLabelSm" placeholder="col-form-label-sm">
       </div>
       </div>
       <div class="row mb-3">
-      <label for="colFormLabel" class="control">Email</label>
+      <label for="colFormLabel" class="label">Email</label>
       <div class="col-sm-10">
-      <input type="email" class="control" id="colFormLabel" placeholder="col-form-label">
+      <input type="email" class="label" id="colFormLabel" placeholder="col-form-label">
       </div>
       </div>
       <div class="row">
