--- a/productos.html
+++ b/productos.html
@@ -8,8 +8,10 @@
   <body>
 
    <header class="header">
+     <div class="row main-container middle-xs center-xs">
+      <div class="col-md-8 col-sm-10 col-xs-11 col-lg-7">
       <nav class="nav">
-        <a href="index.html">
+    <a href="index.html">
         <img class="nav-logotipo" src="https://www.distritomoda.com.ar/sites/default/files/logos_tienda/arizonalogo.jpg" alt="logotipo">
           </a>
         <ul class="navli">
@@ -31,24 +33,101 @@
       <p>En esta pagina web, vas a encontrar todo tipo de prendas para el dia y la noche</p>
     </header> -->
 
+<div class="productos">
+  <div class="row">
+    <div class="col-xs-10 col-sm-6 col-md-4 produc">
+      <div class="card">
+        <img src="https://d3ugyf2ht6aenh.cloudfront.net/stores/978/315/products/20210224_1931171-5780c294a1c4b10c4316142901151036-320-0.jpg" alt="">
+        <h3>PANTALONES EMELY</h3>
+        <p>$1300</p>
+      </div>
+      </div>
+      </div>
+  </div>
+  <div class="productos">
+    <div class="row">
+      <div class="col-xs-10 col-sm-6 col-md-4 produc">
+        <div class="card">
+          <img src="https://d3ugyf2ht6aenh.cloudfront.net/stores/978/315/products/20210129_1302011-ccbcdf333d015db53f16120481940766-320-0.jpg" alt="">
+          <h3>PANTALONES</h3>
+          <p>$1300</p>
+        </div>
+        </div>
+        </div>
+    </div>
+
     <div class="productos">
-            <div class="row">
-              <div class="col-xs-10 col-sm-6 col-md-4 produc" >
-                <div class="card">
-                  <img src="assets/css/img/img 1.jpg" alt="bocadillo">
-                  <h3>Postre 1</h3>
-                  <p>$120</p>
-                </div>
-                </div>
-                <div class="col-xs-10 col-sm-6 col-md-4 produc" >
-                  <div class="card">
-                    <img src="assets/css/img/img 2.jpg" alt="torta">
-                    <h3>Postre 2</h3>
-                    <p>$220</p>
+      <div class="row">
+        <div class="col-xs-10 col-sm-6 col-md-4 produc">
+          <div class="card">
+            <img src="https://d3ugyf2ht6aenh.cloudfront.net/stores/978/315/products/img-20210227-wa00051-51130d3fc41e7f60c516144599733273-320-0.jpg" alt="">
+            <h3>CAMISA GIME</h3>
+            <p>$2300</p>
+          </div>
+          </div>
+          </div>
+      </div>
+
+      <div class="productos">
+        <div class="row">
+          <div class="col-xs-10 col-sm-6 col-md-4 produc">
+            <div class="card">
+              <img src="https://d3ugyf2ht6aenh.cloudfront.net/stores/978/315/products/img-20210611-wa00401-213e65eeb0650081cc16234312425798-320-0.jpg" alt="">
+              <h3>CAMISA MARINA</h3>
+              <p>$2300</p>
+            </div>
+            </div>
+            </div>
+        </div>
+
+        <div class="productos">
+          <div class="row">
+            <div class="col-xs-10 col-sm-6 col-md-4 produc">
+              <div class="card">
+                <img src="https://d3ugyf2ht6aenh.cloudfront.net/stores/978/315/products/img-20210514-wa00311-0457dc09c5c6f7e9b116210231788852-320-0.jpg" alt="">
+                <h3>CAMPERA HARBIE</h3>
+                <p>$3300</p>
               </div>
+              </div>
+              </div>
+          </div>
+
+          <div class="productos">
+            <div class="row">
+              <div class="col-xs-10 col-sm-6 col-md-4 produc">
+                <div class="card">
+                  <img src="https://d3ugyf2ht6aenh.cloudfront.net/stores/978/315/products/img-20210513-wa00571-38d5d67848239897be16210081762869-320-0.jpg" alt="">
+                  <h3>CAMPERA ROJA</h3>
+                  <p>$3300</p>
+                </div>
+                </div>
+                </div>
             </div>
 
+            <div class="productos">
+              <div class="row">
+                <div class="col-xs-10 col-sm-6 col-md-4 produc">
+                  <div class="card">
+                    <img src="https://d3ugyf2ht6aenh.cloudfront.net/stores/978/315/products/img-20210515-wa00781-b26180b492cbfeb57e16211104382787-240-0.jpg" alt="">
+                    <h3>MAXIBUZO</h3>
+                    <p>$2300</p>
+                  </div>
+                  </div>
+                  </div>
+              </div>
 
+              <div class="productos">
+                <div class="row">
+                  <div class="col-xs-10 col-sm-6 col-md-4 produc">
+                    <div class="card">
+                      <img src="https://d3ugyf2ht6aenh.cloudfront.net/stores/978/315/products/img-20210720-wa00451-0d798557d3583328ff16268722422190-240-0.jpg" alt="">
+                      <h3>BUZO</h3>
+                      <p>$1300</p>
+                    </div>
+                    </div>
+                    </div>
+                </div>
 
+      
 </body>
 </html>
