--- a/ubicacion.html
+++ b/ubicacion.html
@@ -31,5 +31,12 @@
   <!--    <h1>BIENVENIDOS</h1>
       <p>En esta pagina web, vas a encontrar todo tipo de prendas para el dia y la noche</p> -->
 
-    
+    <div class="">
+      <p class="ubicacion">Local abierto al publico de 9 a 12 y de 17 a 21 hs.</p>
+      <p class="ubicacion">Obligado 3171, Reconquista-Santa Fe.</p>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3395.652552145872!2d-60.72916088435781!3d-31.67072421577013!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b5a8fca6d674f7%3A0xb108e34ad94f512d!2sReconquista%203171%2C%20S3000EMD%20Santa%20Fe!5e0!3m2!1ses-419!2sar!4v1626915338382!5m2!1ses-419!2sar" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+    </div>
 </header>
+
+</body>
+</html>
