--- a/quienessomos.html
+++ b/quienessomos.html
@@ -34,9 +34,14 @@
     <!--  <h1>BIENVENIDOS</h1>
       <p>En esta pagina web, vas a encontrar todo tipo de prendas para el dia y la noche</p> -->
 
+
 <section id="QUIENESSOMOS" class="parf"
-  <p>Este emprendimiento fue creado en familia, en ocasion a que nos gusta el rubro. </p>
-  <p>Nos caracterizamos por estar siempre a la vanguardia y tendencias en la moda para ofrecer prendas diferentes para embellecer aún más a nuestras clientas.</p>
+<div class="row main-container middle-xs center-xs">
+ <div class="col-md-8 col-sm-10 col-xs-11 col-lg-7">
+  </div>
+  </div>
+<p>Este emprendimiento fue creado en familia, en ocasion a que nos gusta el rubro. </p>
+<p>Nos caracterizamos por estar siempre a la vanguardia y tendencias en la moda para ofrecer prendas diferentes para embellecer aún más a nuestras clientas.</p>
 <p>Arrancamos en el 2020, donde abrimos nuestro primer local, ubiado en obligado 3121. Donde trabajamos de lunes a sabados</p>
 <p>Nos esforzamos día a día para poder brindarle lo mejor y transmitirles a nuestras clientas SERIEDAD,SEGUIMIENTO Y RESPONSABILIDAD DE SUS PAQUETES.</p>
 <p>Trabajamos con todas las tarjetas, efectivo, transferencia 10 % descuento.</p>
@@ -45,3 +50,6 @@
 
 
     </header>
+
+  </body>
+</html>
