--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>ARIZONA</title>
 <link rel="stylesheet" href="assets/css/estilo.css">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -11,15 +12,9 @@
   </head>
   <body>
 
-    <div class="main">
-      <h1 class="titulo">BIENVENIDOS</h1>
-      <p class="titulo">En esta pagina web, vas a encontrar todo tipo de prendas
-        <br>
-        para el dia y la noche.</p>
-    </div>
 
-   <header class="header">
-      <div class="row main-container middle-xs center-xs">
+<header class="header">
+ <div class="row main-container middle-xs center-xs">
        <div class="col-md-8 col-sm-10 col-xs-11 col-lg-7">
 </div>
   </div>
@@ -29,21 +24,47 @@
           </a>
         <ul class="navli">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page"
-                href="productos.html">PRODUCTOS</a></li>
-              <li class="nav-item">
-                <a class="nav-link"
-                href="contacto.html">CONTACTO</a></li>
-              <li class="nav-item">
-                <a class="nav-link"
-                href="#QUIENESSOMOS">QUINES SOMOS</a></li>
-              <li class="nav-item">
-                <a class="nav-link disabled"
-                href="#¿DONDEESTAMOS?" tabindex="-1" aria-disabled="true">¿DONDE ESTAMOS?</a>
+             <a class="nav-link active" aria-current="page"
+              href="productos.html">PRODUCTOS</a></li>
+             <li class="nav-item">
+            <a class="nav-link"
+            href="contacto.html">CONTACTO</a></li>
+            <li class="nav-item">
+            <a class="nav-link"
+           href="#QUIENESSOMOS">QUINES SOMOS</a></li>
+          <li class="nav-item">
+          <a class="nav-link"
+          href="#¿DONDEESTAMOS?" tabindex="-1" aria-disabled="true">¿DONDE ESTAMOS?</a>
               </li>
             </ul>
       </nav>
+
+      <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="https://cdn.dynamicyield.com/api/8767611/images/1f4ab51f2706__main_slider_21_6-12cuotas.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="https://www.baloop.com.ar/Content/Images/Redise%C3%B1oSpringSummer2022/desktop/banner-slide.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="https://d3ugyf2ht6aenh.cloudfront.net/stores/001/053/068/themes/style/slide-1627585623308-3230269455-7a7a3d2d636c85a2d1c5ddd9633c4b781627585640-1024-1024.jpg?562807543" class="d-block w-100" alt="...">
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
 </header>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js" integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/" crossorigin="anonymous"></script>
 
 
 
