siguieron los cambios en html y ahora en css, como asi tambien se elimino una carpeta que ya no era necesario tenerla

--- a/index.html
+++ b/index.html
@@ -31,36 +31,64 @@
             href="contacto.html">CONTACTO</a></li>
             <li class="nav-item">
             <a class="nav-link"
-           href="#QUIENESSOMOS">QUINES SOMOS</a></li>
-          <li class="nav-item">
-          <a class="nav-link"
-          href="#¿DONDEESTAMOS?" tabindex="-1" aria-disabled="true">¿DONDE ESTAMOS?</a>
+            href="#¿DONDEESTAMOS?" tabindex="-1" aria-disabled="true">¿DONDE ESTAMOS?</a>
               </li>
             </ul>
       </nav>
 
       <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="https://cdn.dynamicyield.com/api/8767611/images/1f4ab51f2706__main_slider_21_6-12cuotas.jpg" class="d-block w-100" alt="...">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="https://cdn.dynamicyield.com/api/8767611/images/1f4ab51f2706__main_slider_21_6-12cuotas.jpg" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="https://www.baloop.com.ar/Content/Images/Redise%C3%B1oSpringSummer2022/desktop/banner-slide.jpg" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="https://d3ugyf2ht6aenh.cloudfront.net/stores/001/053/068/themes/style/slide-1627585623308-3230269455-7a7a3d2d636c85a2d1c5ddd9633c4b781627585640-1024-1024.jpg?562807543" class="d-block w-100" alt="...">
+      </div>
     </div>
-    <div class="carousel-item">
-      <img src="https://www.baloop.com.ar/Content/Images/Redise%C3%B1oSpringSummer2022/desktop/banner-slide.jpg" class="d-block w-100" alt="...">
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+  <div class="card-group">
+    <div class="card">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQlK1r3H7eEoEELpVRBFS42s7KyTIBNJ7HfJA&usqp=CAU"card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">En esta pagina web vas a encontrar todo tipo de prendas para el dia y la noche.</h5>
+        <p class="card-text">Contamos con una muy buena atencion y asesoramiento para tu outfit</p>
+
+      </div>
     </div>
-    <div class="carousel-item">
-      <img src="https://d3ugyf2ht6aenh.cloudfront.net/stores/001/053/068/themes/style/slide-1627585623308-3230269455-7a7a3d2d636c85a2d1c5ddd9633c4b781627585640-1024-1024.jpg?562807543" class="d-block w-100" alt="...">
+    <div class="card">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQdq1lSQWLwQYP854hpdx-eXqUOm7NTywQ6sQ&usqp=CAU" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">MARCAS DISPONIBLES EN EL LOCAL</h5>
+        <p class="card-text">Contamos con una calidad exclusiva, todas estas marcas y en todos los talles.</p>
+      </div>
+    </div>
+    <div class="card">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT3tIqMzEJKdh5k5XEMmIFTH5-bRppdzKmvMw&usqp=CAU" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">TE CONTAMOS UN POQUITO SOBRE NOSOTROS</h5>
+        <p class="card-text">Este emprendimiento fue creado en familia, en ocasion a que nos gusta el rubro.
+        Nos caracterizamos por estar siempre a la vanguardia y tendencias en la moda para ofrecer prendas diferentes para embellecer aún más a nuestras clientas
+        Arrancamos en el 2020,donde trabajamos de lunes a sabados,nos esforzamos día a día para poder brindarle lo mejor y transmitirles a nuestras clientas SERIEDAD,SEGUIMIENTO Y RESPONSABILIDAD DE SUS PAQUETES</p>
+  </div>
     </div>
   </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
-</div>
+
+
 </header>
+
+
+
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp" crossorigin="anonymous"></script>
