--- a/productos.html
+++ b/productos.html
@@ -22,9 +22,6 @@
                 <a class="nav-link"
                 href="contacto.html">CONTACTO</a></li>
               <li class="nav-item">
-                <a class="nav-link" href="#">QUINES SOMOS</a>
-              </li>
-              <li class="nav-item">
                 <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">¿DONDE ESTAMOS?</a>
               </li>
             </ul>
@@ -128,6 +125,31 @@
                     </div>
                 </div>
 
-      
+                <div class="productos">
+                  <div class="row">
+                    <div class="col-xs-10 col-sm-6 col-md-4 produc">
+                      <div class="card">
+                        <img src="https://d3ugyf2ht6aenh.cloudfront.net/stores/978/315/products/img-20210720-wa00451-0d798557d3583328ff16268722422190-240-0.jpg" alt="">
+                        <h3>BUZO</h3>
+                        <p>$1300</p>
+                      </div>
+                      </div>
+                      </div>
+                  </div>
+
+                  <div class="productos">
+                    <div class="row">
+                      <div class="col-xs-10 col-sm-6 col-md-4 produc">
+                        <div class="card">
+                          <img src="https://d3ugyf2ht6aenh.cloudfront.net/stores/978/315/products/img-20210720-wa00451-0d798557d3583328ff16268722422190-240-0.jpg" alt="">
+                          <h3>BUZO</h3>
+                          <p>$1300</p>
+                        </div>
+                        </div>
+                        </div>
+                    </div>
+
+
+
 </body>
 </html>
