siguieron los cambios en html y css

--- a/productos.html
+++ b/productos.html
@@ -26,11 +26,11 @@
               </li>
             </ul>
       </nav>
-    <!--  <h1>BIENVENIDOS</h1>
+    <!-- <h1>BIENVENIDOS</h1>
       <p>En esta pagina web, vas a encontrar todo tipo de prendas para el dia y la noche</p>
     </header> -->
 
-<div class="productos">
+ <div class="productos1">
   <div class="row">
     <div class="col-xs-10 col-sm-6 col-md-4 produc">
       <div class="card">
@@ -41,7 +41,7 @@
       </div>
       </div>
   </div>
-  <div class="productos">
+  <div class="productos2">
     <div class="row">
       <div class="col-xs-10 col-sm-6 col-md-4 produc">
         <div class="card">
@@ -53,19 +53,7 @@
         </div>
     </div>
 
-    <div class="productos">
-      <div class="row">
-        <div class="col-xs-10 col-sm-6 col-md-4 produc">
-          <div class="card">
-            <img src="https://d3ugyf2ht6aenh.cloudfront.net/stores/978/315/products/img-20210227-wa00051-51130d3fc41e7f60c516144599733273-320-0.jpg" alt="">
-            <h3>CAMISA GIME</h3>
-            <p>$2300</p>
-          </div>
-          </div>
-          </div>
-      </div>
-
-      <div class="productos">
+<div class="productos1">
         <div class="row">
           <div class="col-xs-10 col-sm-6 col-md-4 produc">
             <div class="card">
@@ -77,7 +65,7 @@
             </div>
         </div>
 
-        <div class="productos">
+        <div class="productos1">
           <div class="row">
             <div class="col-xs-10 col-sm-6 col-md-4 produc">
               <div class="card">
@@ -89,7 +77,7 @@
               </div>
           </div>
 
-          <div class="productos">
+          <div class="productos2">
             <div class="row">
               <div class="col-xs-10 col-sm-6 col-md-4 produc">
                 <div class="card">
@@ -101,7 +89,7 @@
                 </div>
             </div>
 
-            <div class="productos">
+            <div class="productos1">
               <div class="row">
                 <div class="col-xs-10 col-sm-6 col-md-4 produc">
                   <div class="card">
@@ -113,7 +101,7 @@
                   </div>
               </div>
 
-              <div class="productos">
+              <div class="productos2">
                 <div class="row">
                   <div class="col-xs-10 col-sm-6 col-md-4 produc">
                     <div class="card">
@@ -125,30 +113,17 @@
                     </div>
                 </div>
 
-                <div class="productos">
-                  <div class="row">
-                    <div class="col-xs-10 col-sm-6 col-md-4 produc">
-                      <div class="card">
-                        <img src="https://d3ugyf2ht6aenh.cloudfront.net/stores/978/315/products/img-20210720-wa00451-0d798557d3583328ff16268722422190-240-0.jpg" alt="">
-                        <h3>BUZO</h3>
-                        <p>$1300</p>
-                      </div>
-                      </div>
-                      </div>
-                  </div>
-
-                  <div class="productos">
-                    <div class="row">
-                      <div class="col-xs-10 col-sm-6 col-md-4 produc">
-                        <div class="card">
-                          <img src="https://d3ugyf2ht6aenh.cloudfront.net/stores/978/315/products/img-20210720-wa00451-0d798557d3583328ff16268722422190-240-0.jpg" alt="">
-                          <h3>BUZO</h3>
-                          <p>$1300</p>
-                        </div>
-                        </div>
-                        </div>
+                <div class="productos1">
+                <div class="row">
+                  <div class="col-xs-10 col-sm-6 col-md-4 produc">
+                    <div class="card">
+                      <img src="https://d3ugyf2ht6aenh.cloudfront.net/stores/978/315/products/img-20210611-wa00401-213e65eeb0650081cc16234312425798-320-0.jpg" alt="">
+                      <h3>CAMISA MARINA</h3>
+                      <p>$2300</p>
                     </div>
-
+                    </div>
+                    </div>
+                </div>
 
 
 </body>
